# slint-car-dashboard

./: Cargo.toml  LICENSE.txt  README.md  build.rs
src/: main.rs  observer.rs  ui.rs  vehicle.rs  web.rs
src/slint/: main.slint
src/slint/components/: cooler.slint  dashboard_state.slint  fuel.slint  shifter.slint  speedometer.slint  tachometer.slint
src/slint/components/gauge_base/: big_gauge.slint  data_dash.slint  small_gauge.slint
