[package]
name = "speedometer"
version = "0.1.0"
build = "build.rs"
edition = "2024"

[dependencies]
slint = { version = "1.16.1", features = ["backend-winit", "renderer-femtovg"] }
once_cell = "1.21.4"
image = "0.25.10"
rand= "0.10.1"
axum = {version = "0.8.9", optional = true}
tokio = { version = "1.52.3", features = ["rt-multi-thread"], optional = true }
serde = { version = "1.0.228", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[build-dependencies]
slint-build = { version = "1.16.1" }

[features]
default = []
web = ["dep:tokio", "dep:axum", "dep:serde", "dep:reqwest"]
